--- a/giftly/Base.lproj/Main.storyboard
+++ b/giftly/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="70K-F4-ngp">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -65,10 +65,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="ySS-vh-JGC"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="83.705357142857139"/>
+            <point key="canvasLocation" x="928.98550724637687" y="83.705357142857139"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="Otd-0H-3cH">
@@ -149,6 +150,21 @@
                                 <color key="textColor" systemColor="systemRedColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SbQ-eq-ZyD">
+                                <rect key="frame" x="29" y="47" width="54" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Back">
+                                            <attributes>
+                                                <font key="NSFont" usesAppearanceFont="YES"/>
+                                                <integer key="NSUnderline" value="1"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Wpo-ce-mLp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -165,7 +181,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ykO-Ln-r0r" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="pCa-rr-Afd" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="721.73913043478262" y="83.705357142857139"/>
+            <point key="canvasLocation" x="1631.8840579710147" y="83.705357142857139"/>
         </scene>
         <!--User Info View Controller-->
         <scene sceneID="gRN-o9-e7D">
@@ -320,10 +336,26 @@
                                 <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                 <color key="tintColor" systemColor="systemRedColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="1200" id="C8r-Ki-E12"/>
                                     <constraint firstAttribute="height" constant="1200" id="qeU-UV-xYP"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1300" id="sEt-PZ-D4h"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1200" id="sEt-PZ-D4h"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ZP-Hh-JJg">
+                                <rect key="frame" x="10" y="10" width="54" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Back">
+                                            <attributes>
+                                                <font key="NSFont" usesAppearanceFont="YES"/>
+                                                <integer key="NSUnderline" value="1"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </buttonConfiguration>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Ztd-1M-bL7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -353,7 +385,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IgV-dI-eLC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1426.0869565217392" y="184.82142857142856"/>
+            <point key="canvasLocation" x="2334.7826086956525" y="184.82142857142856"/>
         </scene>
         <!--Photo View Controller-->
         <scene sceneID="cLI-Gd-OnW">
@@ -423,7 +455,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ztm-1Z-KeE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="CNh-Zj-Ecd" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2111.594202898551" y="83.705357142857139"/>
+            <point key="canvasLocation" x="3021.739130434783" y="83.705357142857139"/>
         </scene>
         <!--Item 2-->
         <scene sceneID="npN-em-F5N">
@@ -439,7 +471,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IIH-8W-YZM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3986" y="548"/>
+            <point key="canvasLocation" x="4895.652173913044" y="547.76785714285711"/>
         </scene>
         <!--Item 1-->
         <scene sceneID="Qs4-bM-eKT">
@@ -455,7 +487,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eHg-hN-dLk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3986" y="-60"/>
+            <point key="canvasLocation" x="4895.652173913044" y="-60.267857142857139"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="CGc-0Q-cbo">
@@ -580,7 +612,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wS0-ek-Lgs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2802.898550724638" y="83.705357142857139"/>
+            <point key="canvasLocation" x="3713.04347826087" y="83.705357142857139"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="sv1-5m-wIj">
@@ -598,7 +630,25 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="chh-lU-IV1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4864" y="298"/>
+            <point key="canvasLocation" x="5773.913043478261" y="297.99107142857139"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5ho-A0-nEH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="70K-F4-ngp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="htz-BS-XJ9">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Ivf-PU-HOB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a8O-V4-hMb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="83.705357142857139"/>
         </scene>
     </scenes>
     <resources>
